--- a/mNet/Profile.storyboard
+++ b/mNet/Profile.storyboard
@@ -34,7 +34,7 @@
                                 <rect key="frame" x="0.0" y="116" width="375" height="684"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eUO-cH-6MD">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="614.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="631.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JsP-5I-kbW" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
                                                 <rect key="frame" x="28" y="18.5" width="37" height="17"/>
@@ -49,7 +49,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saurabh Suman" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zIU-ZV-zGa" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="28" y="44.5" width="95" height="17"/>
+                                                <rect key="frame" x="28" y="45" width="325" height="17"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Light" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -85,13 +85,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ewc-R9-gfV" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="28" y="430.5" width="38" height="17"/>
+                                                <rect key="frame" x="28" y="447.5" width="38" height="17"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvW-IR-brl" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="28" y="489.5" width="35.5" height="17"/>
+                                                <rect key="frame" x="28" y="506.5" width="35.5" height="17"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -109,7 +109,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UI Designer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQa-yw-Uz0" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="28" y="221.5" width="69" height="17"/>
+                                                <rect key="frame" x="28" y="222" width="325" height="17"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Light" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -127,25 +127,25 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A 503  adarsh road , goregaon station , mumbai - 400063 " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZJM-6Y-Fcu" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="28" y="397.5" width="338" height="17"/>
+                                                <rect key="frame" x="28" y="398" width="325" height="33.5"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Light" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="something about myself" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPk-l4-bbB" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="28" y="456.5" width="144.5" height="17"/>
+                                                <rect key="frame" x="28" y="474" width="325" height="17"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Light" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="example@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Umn-Ic-AlR" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                                <rect key="frame" x="28" y="515.5" width="124.5" height="17"/>
+                                                <rect key="frame" x="28" y="533" width="325" height="17"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Light" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thq-SN-Ddc">
-                                                <rect key="frame" x="28" y="560.5" width="68" height="29"/>
+                                                <rect key="frame" x="28" y="577.5" width="68" height="29"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="68" id="0b0-fw-m06"/>
                                                 </constraints>
@@ -184,6 +184,7 @@
                                             <constraint firstItem="ewc-R9-gfV" firstAttribute="top" secondItem="ZJM-6Y-Fcu" secondAttribute="bottom" constant="16" id="DLw-6p-iZl"/>
                                             <constraint firstItem="GlN-qZ-PSt" firstAttribute="top" secondItem="hDH-tz-4tE" secondAttribute="bottom" constant="9" id="DVt-Sz-20o"/>
                                             <constraint firstItem="7Ap-GM-WLU" firstAttribute="top" secondItem="1IX-q2-ncg" secondAttribute="bottom" constant="9" id="DhB-bF-XU0"/>
+                                            <constraint firstAttribute="trailing" secondItem="RPk-l4-bbB" secondAttribute="trailing" constant="22" id="EXI-2b-sR5"/>
                                             <constraint firstItem="Umn-Ic-AlR" firstAttribute="top" secondItem="vvW-IR-brl" secondAttribute="bottom" constant="9" id="FWH-Eq-D6n"/>
                                             <constraint firstItem="1IX-q2-ncg" firstAttribute="top" secondItem="xQa-yw-Uz0" secondAttribute="bottom" constant="15" id="GSV-jA-42p"/>
                                             <constraint firstItem="oDZ-7n-nZb" firstAttribute="leading" secondItem="JsP-5I-kbW" secondAttribute="leading" id="HJ8-ik-kML"/>
@@ -198,13 +199,17 @@
                                             <constraint firstItem="GlN-qZ-PSt" firstAttribute="leading" secondItem="JsP-5I-kbW" secondAttribute="leading" id="ZNH-db-uaX"/>
                                             <constraint firstItem="JsP-5I-kbW" firstAttribute="top" secondItem="eUO-cH-6MD" secondAttribute="top" constant="18.5" id="crf-ze-Olh"/>
                                             <constraint firstItem="TEb-RG-Oar" firstAttribute="top" secondItem="GlN-qZ-PSt" secondAttribute="bottom" constant="16" id="esu-ZB-eKA"/>
+                                            <constraint firstAttribute="trailing" secondItem="ZJM-6Y-Fcu" secondAttribute="trailing" constant="22" id="ew1-0b-tQJ"/>
                                             <constraint firstItem="xQa-yw-Uz0" firstAttribute="leading" secondItem="JsP-5I-kbW" secondAttribute="leading" id="ff6-FV-Dgk"/>
                                             <constraint firstItem="YZ2-IM-4Kh" firstAttribute="leading" secondItem="JsP-5I-kbW" secondAttribute="leading" id="gMF-8F-qRk"/>
+                                            <constraint firstAttribute="trailing" secondItem="Umn-Ic-AlR" secondAttribute="trailing" constant="22" id="gN6-5y-iNY"/>
                                             <constraint firstItem="zIU-ZV-zGa" firstAttribute="top" secondItem="JsP-5I-kbW" secondAttribute="bottom" constant="9" id="ikb-fh-wB3"/>
                                             <constraint firstItem="ewc-R9-gfV" firstAttribute="leading" secondItem="JsP-5I-kbW" secondAttribute="leading" id="is3-1h-qdQ"/>
                                             <constraint firstItem="XvK-Xd-80a" firstAttribute="top" secondItem="oDZ-7n-nZb" secondAttribute="bottom" constant="9" id="jrL-mL-aTu"/>
                                             <constraint firstItem="JsP-5I-kbW" firstAttribute="leading" secondItem="eUO-cH-6MD" secondAttribute="leading" constant="28" id="kwn-h1-Ke5"/>
+                                            <constraint firstAttribute="trailing" secondItem="zIU-ZV-zGa" secondAttribute="trailing" constant="22" id="mss-DT-4Su"/>
                                             <constraint firstItem="YZ2-IM-4Kh" firstAttribute="top" secondItem="QVq-aV-cZd" secondAttribute="bottom" constant="9" id="oTt-aO-nOL"/>
+                                            <constraint firstAttribute="trailing" secondItem="xQa-yw-Uz0" secondAttribute="trailing" constant="22" id="qLY-Jl-rUU"/>
                                             <constraint firstItem="QVq-aV-cZd" firstAttribute="leading" secondItem="JsP-5I-kbW" secondAttribute="leading" id="rbh-6C-eLm"/>
                                             <constraint firstItem="I4e-Jz-HxE" firstAttribute="leading" secondItem="JsP-5I-kbW" secondAttribute="leading" id="uZN-F6-egJ"/>
                                             <constraint firstItem="vvW-IR-brl" firstAttribute="top" secondItem="RPk-l4-bbB" secondAttribute="bottom" constant="16" id="udr-T6-S8g"/>
