--- a/mNet/Login.storyboard
+++ b/mNet/Login.storyboard
@@ -82,11 +82,11 @@
                                             <outlet property="delegate" destination="OM2-0e-Tyo" id="y4A-pL-ZUi"/>
                                         </connections>
                                     </textField>
-                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-RF-tff" customClass="CustomBlueBackgroundButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="483" width="320" height="36"/>
+                                    <button hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-RF-tff" customClass="CustomBlueBackgroundButton" customModule="mNet" customModuleProvider="target">
+                                        <rect key="frame" x="27" y="401" width="320" height="0.0"/>
                                         <color key="backgroundColor" red="0.011764705882352941" green="0.51764705882352935" blue="0.80784313725490198" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="pJX-es-mxn"/>
+                                            <constraint firstAttribute="height" id="pJX-es-mxn"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="14"/>
                                         <state key="normal" title="LOG IN">
@@ -102,11 +102,11 @@
                                             <action selector="signInButtonClicked:" destination="OM2-0e-Tyo" eventType="touchUpInside" id="hcj-UE-qlI"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0I-hd-kCF" customClass="CustomRedBackgroundColorButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="482.5" width="320" height="36"/>
+                                    <button hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0I-hd-kCF" customClass="CustomRedBackgroundColorButton" customModule="mNet" customModuleProvider="target">
+                                        <rect key="frame" x="27" y="400.5" width="320" height="0.0"/>
                                         <color key="backgroundColor" red="0.8666666666666667" green="0.29411764705882354" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="FYp-BW-0xt"/>
+                                            <constraint firstAttribute="height" id="FYp-BW-0xt"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="14"/>
                                         <state key="normal" title="LOG IN WITH GOOGLE">
@@ -122,7 +122,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfp-hv-dLo" userLabel="Proceed Button" customClass="CustomBlueBackgroundButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="483" width="320" height="36"/>
+                                        <rect key="frame" x="27" y="401" width="320" height="36"/>
                                         <color key="backgroundColor" red="0.01176470588" green="0.51764705879999995" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="320" id="Kbs-Js-vJI"/>
@@ -143,9 +143,9 @@
                                         </connections>
                                     </button>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OnW-hF-Wwm" userLabel="Password View">
-                                        <rect key="frame" x="27" y="338.5" width="321.5" height="82"/>
+                                        <rect key="frame" x="27" y="338.5" width="321.5" height="0.0"/>
                                         <subviews>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter your Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dDm-Ww-etm" customClass="CustomBrownTextColorTextfield" customModule="mNet" customModuleProvider="target">
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter your Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dDm-Ww-etm" customClass="CustomBrownTextColorTextfield" customModule="mNet" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="46" width="321.5" height="36"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
@@ -172,13 +172,13 @@
                                                     <outlet property="delegate" destination="OM2-0e-Tyo" id="Ctk-5b-JUt"/>
                                                 </connections>
                                             </textField>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATu-5p-PAU" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATu-5p-PAU" customClass="CustomBrownTextColorLabel" customModule="mNet" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="18" width="62" height="17"/>
                                                 <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="14"/>
                                                 <color key="textColor" red="0.3803921569" green="0.28235294119999998" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gM-An-GqP">
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gM-An-GqP">
                                                 <rect key="frame" x="294.5" y="55" width="18" height="18"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="18" id="AC2-ci-MOg"/>
@@ -194,7 +194,7 @@
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="4gM-An-GqP" secondAttribute="trailing" constant="9" id="0Eb-EU-tJg"/>
                                             <constraint firstItem="dDm-Ww-etm" firstAttribute="top" secondItem="ATu-5p-PAU" secondAttribute="bottom" priority="999" constant="11" id="45F-nQ-5Uu"/>
-                                            <constraint firstAttribute="height" constant="82" id="7Nh-Kj-ew0"/>
+                                            <constraint firstAttribute="height" id="7Nh-Kj-ew0"/>
                                             <constraint firstItem="ATu-5p-PAU" firstAttribute="top" secondItem="OnW-hF-Wwm" secondAttribute="top" priority="999" constant="18" id="HAI-WH-FKJ"/>
                                             <constraint firstAttribute="trailing" secondItem="dDm-Ww-etm" secondAttribute="trailing" id="Rhd-Vd-ZZo"/>
                                             <constraint firstItem="ATu-5p-PAU" firstAttribute="leading" secondItem="OnW-hF-Wwm" secondAttribute="leading" id="bTH-6f-uVq"/>
@@ -203,11 +203,11 @@
                                             <constraint firstItem="dDm-Ww-etm" firstAttribute="leading" secondItem="ATu-5p-PAU" secondAttribute="leading" id="x4c-GM-Znc"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vu1-Qt-yj7" customClass="CustomRedBackgroundColorButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="535" width="320" height="36"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vu1-Qt-yj7" customClass="CustomRedBackgroundColorButton" customModule="mNet" customModuleProvider="target">
+                                        <rect key="frame" x="27" y="417" width="320" height="0.0"/>
                                         <color key="backgroundColor" red="0.81568627449999997" green="0.0078431372550000003" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="t8d-mu-Phe"/>
+                                            <constraint firstAttribute="height" id="t8d-mu-Phe"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Bold" family="San Francisco Display" pointSize="15"/>
                                         <state key="normal" title="BACK">
@@ -223,7 +223,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PvR-dH-47p">
-                                        <rect key="frame" x="27" y="438.5" width="20" height="20"/>
+                                        <rect key="frame" x="27" y="356.5" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="6zd-1t-If0"/>
                                             <constraint firstAttribute="width" secondItem="PvR-dH-47p" secondAttribute="height" multiplier="1:1" id="ces-a2-50v"/>
@@ -234,13 +234,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khH-V2-waG" customClass="CustomBlueTextColorLabel" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="59" y="439" width="106" height="18"/>
+                                        <rect key="frame" x="59" y="357" width="106" height="18"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                         <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5V6-Bq-Wcx" customClass="CustomBlueTextColorButton" customModule="mNet" customModuleProvider="target">
-                                        <rect key="frame" x="121.5" y="603" width="131" height="30"/>
+                                        <rect key="frame" x="121.5" y="449" width="131" height="30"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                         <state key="normal" title="Forgot Password?">
                                             <color key="titleColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -253,7 +253,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="pfp-hv-dLo" secondAttribute="trailing" constant="28" id="2Bk-td-43A"/>
-                                    <constraint firstItem="vu1-Qt-yj7" firstAttribute="top" secondItem="kKd-RF-tff" secondAttribute="bottom" constant="16" id="7Qm-mq-A1T"/>
+                                    <constraint firstItem="vu1-Qt-yj7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="kKd-RF-tff" secondAttribute="bottom" constant="16" id="7Qm-mq-A1T"/>
                                     <constraint firstItem="2Ix-Rj-yrm" firstAttribute="leading" secondItem="ZpG-Y4-Epn" secondAttribute="leading" constant="32" id="8Up-rh-TTY"/>
                                     <constraint firstItem="OnW-hF-Wwm" firstAttribute="trailing" secondItem="RSB-H9-XkY" secondAttribute="trailing" id="DbY-XH-1tM"/>
                                     <constraint firstItem="vu1-Qt-yj7" firstAttribute="leading" secondItem="pfp-hv-dLo" secondAttribute="leading" id="F1q-vQ-NYf"/>
@@ -276,6 +276,7 @@
                                     <constraint firstItem="khH-V2-waG" firstAttribute="centerY" secondItem="PvR-dH-47p" secondAttribute="centerY" id="aGg-ZV-zmO"/>
                                     <constraint firstItem="RgB-Ys-snv" firstAttribute="top" secondItem="2Ix-Rj-yrm" secondAttribute="bottom" constant="63" id="avz-Je-8ZC"/>
                                     <constraint firstItem="5V6-Bq-Wcx" firstAttribute="top" secondItem="vu1-Qt-yj7" secondAttribute="bottom" constant="32" id="ck9-Y9-Z32"/>
+                                    <constraint firstItem="vu1-Qt-yj7" firstAttribute="top" secondItem="Y0I-hd-kCF" secondAttribute="bottom" priority="999" constant="16" id="dvZ-ry-IuJ"/>
                                     <constraint firstItem="RSB-H9-XkY" firstAttribute="centerX" secondItem="ZpG-Y4-Epn" secondAttribute="centerX" id="ebU-7i-9DK"/>
                                     <constraint firstItem="RSB-H9-XkY" firstAttribute="top" secondItem="kCb-WY-YI5" secondAttribute="bottom" constant="11" id="h14-Yb-Jss"/>
                                     <constraint firstItem="Y0I-hd-kCF" firstAttribute="width" secondItem="kKd-RF-tff" secondAttribute="width" id="jrM-9z-jDS"/>
